Complete #3-8: Implement Notification’s using UAMP’s MediaNotificationManager class, modified for our purposes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="futurebass">futurebass</string>
     <string name="play">M11,10 L18,13.74 18,22.28 11,26 M18,13.74 L26,18 26,18 18,22.28</string>
     <string name="pause">M11,10 L17,10 17,26 11,26 M20,10 L26,10 26,26 20,26</string>
+    <string name="previous">Previous</string>
+    <string name="next">Next</string>
 </resources>
