Add #6-6: hiphopheads is added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
   <string name="electronicmusic">electronicmusic</string>
   <string name="mashups">mashups</string>
   <string name="futurebeats">futurebeats</string>
+  <string name="hiphopheads">hiphopheads</string>
 </resources>
